Fix layout on small screens.

--- a/src/styles/components/now-playing.scss
+++ b/src/styles/components/now-playing.scss
@@ -29,7 +29,6 @@
   &__container {
     display: flex;
     flex-flow: column nowrap;
-    height: 100%;
     padding: 0;
     width: 100%;
     align-items: center;
